--- a/src/index.css
+++ b/src/index.css
@@ -12,8 +12,34 @@ body {
 }
 
 :root {
+  --header-height: 60px;
+
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+/* For Webkit-based browsers (Chrome, Safari and Opera) */
+.scrollbar-primary {
+  scrollbar-gutter: stable;
+}
+@-moz-document url-prefix() {
+  .scrollbar-primary {
+    scrollbar-color: #ffffff70 #ffffff35;
+    scrollbar-width: thin;
+  }
+}
+.scrollbar-primary::-webkit-scrollbar {
+  width: 3px;
+}
+.scrollbar-primary::-webkit-scrollbar-thumb {
+  background: #ffffff70;
+  border-radius: 5px;
+}
+.scrollbar-primary::-webkit-scrollbar-thumb:hover {
+  background: #ffffffa8;
+}
+.scrollbar-primary::-webkit-scrollbar-thumb:active {
+  background: #ffffff;
 }
