--- a/app/app.css
+++ b/app/app.css
@@ -4,8 +4,12 @@
 @custom-variant dark (&:is(.dark *));
 
 @theme {
-  --font-sans: "Inter", ui-sans-serif, system-ui, sans-serif,
-    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  /* --font-sans: "Inter", ui-sans-serif, system-ui, sans-serif,
+    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; */
+
+  --font-sans: Inter, sans-serif;
+  --font-serif: Source Serif 4, serif;
+  --font-mono: JetBrains Mono, monospace;
 }
 
 html,
@@ -22,6 +26,7 @@ body {
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
   --radius-xl: calc(var(--radius) + 4px);
+
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --color-card: var(--card);
@@ -37,6 +42,7 @@ body {
   --color-accent: var(--accent);
   --color-accent-foreground: var(--accent-foreground);
   --color-destructive: var(--destructive);
+  --color-destructive-foreground: var(--destructive-foreground);
   --color-border: var(--border);
   --color-input: var(--input);
   --color-ring: var(--ring);
@@ -53,75 +59,123 @@ body {
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
+
+  --font-sans: var(--font-sans);
+  --font-mono: var(--font-mono);
+  --font-serif: var(--font-serif);
+
+  --shadow-2xs: var(--shadow-2xs);
+  --shadow-xs: var(--shadow-xs);
+  --shadow-sm: var(--shadow-sm);
+  --shadow: var(--shadow);
+  --shadow-md: var(--shadow-md);
+  --shadow-lg: var(--shadow-lg);
+  --shadow-xl: var(--shadow-xl);
+  --shadow-2xl: var(--shadow-2xl);
 }
 
 :root {
-  --radius: 0.625rem;
-  --background: oklch(1 0 0);
-  --foreground: oklch(0.141 0.005 285.823);
-  --card: oklch(1 0 0);
-  --card-foreground: oklch(0.141 0.005 285.823);
-  --popover: oklch(1 0 0);
-  --popover-foreground: oklch(0.141 0.005 285.823);
-  --primary: oklch(0.21 0.006 285.885);
-  --primary-foreground: oklch(0.985 0 0);
-  --secondary: oklch(0.967 0.001 286.375);
-  --secondary-foreground: oklch(0.21 0.006 285.885);
-  --muted: oklch(0.967 0.001 286.375);
-  --muted-foreground: oklch(0.552 0.016 285.938);
-  --accent: oklch(0.967 0.001 286.375);
-  --accent-foreground: oklch(0.21 0.006 285.885);
-  --destructive: oklch(0.577 0.245 27.325);
-  --border: oklch(0.92 0.004 286.32);
-  --input: oklch(0.92 0.004 286.32);
-  --ring: oklch(0.705 0.015 286.067);
-  --chart-1: oklch(0.646 0.222 41.116);
-  --chart-2: oklch(0.6 0.118 184.704);
-  --chart-3: oklch(0.398 0.07 227.392);
-  --chart-4: oklch(0.828 0.189 84.429);
-  --chart-5: oklch(0.769 0.188 70.08);
-  --sidebar: oklch(0.985 0 0);
-  --sidebar-foreground: oklch(0.141 0.005 285.823);
-  --sidebar-primary: oklch(0.21 0.006 285.885);
-  --sidebar-primary-foreground: oklch(0.985 0 0);
-  --sidebar-accent: oklch(0.967 0.001 286.375);
-  --sidebar-accent-foreground: oklch(0.21 0.006 285.885);
-  --sidebar-border: oklch(0.92 0.004 286.32);
-  --sidebar-ring: oklch(0.705 0.015 286.067);
+  --radius: 0.25rem;
+
+  --background: #ffffff;
+  --foreground: #18181b;
+  --card: #fafafa;
+  --card-foreground: #18181b;
+  --popover: #fafafa;
+  --popover-foreground: #18181b;
+  --primary: #0084d1;
+  --primary-foreground: #ffffff;
+  --secondary: #fafafa;
+  --secondary-foreground: #808080;
+  --muted: #fafafa;
+  --muted-foreground: #808080;
+  --accent: #fafafa;
+  --accent-foreground: #0084d1;
+  --destructive: #ef4444;
+  --destructive-foreground: #ffffff;
+  --border: #efefef;
+  --input: #efefef;
+  --ring: #0084d1;
+  --chart-1: #66b9ea;
+  --chart-2: #339fdd;
+  --chart-3: #0084d1;
+  --chart-4: #006aa6;
+  --chart-5: #00527f;
+  --sidebar: #fafafa;
+  --sidebar-foreground: #808080;
+  --sidebar-primary: #0084d1;
+  --sidebar-primary-foreground: #ffffff;
+  --sidebar-accent: #fafafa;
+  --sidebar-accent-foreground: #18181b;
+  --sidebar-border: #efefef;
+  --sidebar-ring: #0084d1;
+
+  --shadow-2xs: 0 0px 0px 0px hsl(0 0% 88.2353% / 0);
+  --shadow-xs: 0 0px 0px 0px hsl(0 0% 88.2353% / 0);
+  --shadow-sm: 0 0px 0px 0px hsl(0 0% 88.2353% / 0),
+    0 1px 2px -1px hsl(0 0% 88.2353% / 0);
+  --shadow: 0 0px 0px 0px hsl(0 0% 88.2353% / 0),
+    0 1px 2px -1px hsl(0 0% 88.2353% / 0);
+  --shadow-md: 0 0px 0px 0px hsl(0 0% 88.2353% / 0),
+    0 2px 4px -1px hsl(0 0% 88.2353% / 0);
+  --shadow-lg: 0 0px 0px 0px hsl(0 0% 88.2353% / 0),
+    0 4px 6px -1px hsl(0 0% 88.2353% / 0);
+  --shadow-xl: 0 0px 0px 0px hsl(0 0% 88.2353% / 0),
+    0 8px 10px -1px hsl(0 0% 88.2353% / 0);
+  --shadow-2xl: 0 0px 0px 0px hsl(0 0% 88.2353% / 0);
+  --tracking-normal: 0em;
+  --spacing: 0.25rem;
 }
 
 .dark {
-  --background: oklch(0.141 0.005 285.823);
-  --foreground: oklch(0.985 0 0);
-  --card: oklch(0.21 0.006 285.885);
-  --card-foreground: oklch(0.985 0 0);
-  --popover: oklch(0.21 0.006 285.885);
-  --popover-foreground: oklch(0.985 0 0);
-  --primary: oklch(0.92 0.004 286.32);
-  --primary-foreground: oklch(0.21 0.006 285.885);
-  --secondary: oklch(0.274 0.006 286.033);
-  --secondary-foreground: oklch(0.985 0 0);
-  --muted: oklch(0.274 0.006 286.033);
-  --muted-foreground: oklch(0.705 0.015 286.067);
-  --accent: oklch(0.274 0.006 286.033);
-  --accent-foreground: oklch(0.985 0 0);
-  --destructive: oklch(0.704 0.191 22.216);
-  --border: oklch(1 0 0 / 10%);
-  --input: oklch(1 0 0 / 15%);
-  --ring: oklch(0.552 0.016 285.938);
-  --chart-1: oklch(0.488 0.243 264.376);
-  --chart-2: oklch(0.696 0.17 162.48);
-  --chart-3: oklch(0.769 0.188 70.08);
-  --chart-4: oklch(0.627 0.265 303.9);
-  --chart-5: oklch(0.645 0.246 16.439);
-  --sidebar: oklch(0.21 0.006 285.885);
-  --sidebar-foreground: oklch(0.985 0 0);
-  --sidebar-primary: oklch(0.488 0.243 264.376);
-  --sidebar-primary-foreground: oklch(0.985 0 0);
-  --sidebar-accent: oklch(0.274 0.006 286.033);
-  --sidebar-accent-foreground: oklch(0.985 0 0);
-  --sidebar-border: oklch(1 0 0 / 10%);
-  --sidebar-ring: oklch(0.552 0.016 285.938);
+  --radius: 0.25rem;
+
+  --background: #202020;
+  --foreground: #ffffff;
+  --card: #2c2c2c;
+  --card-foreground: #ffffff;
+  --popover: #2c2c2c;
+  --popover-foreground: #c6c6c6;
+  --primary: #00a6f4;
+  --primary-foreground: #ffffff;
+  --secondary: #2c2c2c;
+  --secondary-foreground: #c6c6c6;
+  --muted: #2c2c2c;
+  --muted-foreground: #c6c6c6;
+  --accent: #1b3440;
+  --accent-foreground: #00a6f4;
+  --destructive: #ef4444;
+  --destructive-foreground: #ffffff;
+  --border: #373737;
+  --input: #373737;
+  --ring: #00a6f4;
+  --chart-1: #5bc6f8;
+  --chart-2: #25b5f6;
+  --chart-3: #00a6f4;
+  --chart-4: #0085c2;
+  --chart-5: #006a9c;
+  --sidebar: #2c2c2c;
+  --sidebar-foreground: #c6c6c6;
+  --sidebar-primary: #00a6f4;
+  --sidebar-primary-foreground: #ffffff;
+  --sidebar-accent: #1b3440;
+  --sidebar-accent-foreground: #00a6f4;
+  --sidebar-border: #373737;
+  --sidebar-ring: #00a6f4;
+
+  --shadow-2xs: 0 0px 0px 0px hsl(0 0% 9.4118% / 0);
+  --shadow-xs: 0 0px 0px 0px hsl(0 0% 9.4118% / 0);
+  --shadow-sm: 0 0px 0px 0px hsl(0 0% 9.4118% / 0),
+    0 1px 2px -1px hsl(0 0% 9.4118% / 0);
+  --shadow: 0 0px 0px 0px hsl(0 0% 9.4118% / 0),
+    0 1px 2px -1px hsl(0 0% 9.4118% / 0);
+  --shadow-md: 0 0px 0px 0px hsl(0 0% 9.4118% / 0),
+    0 2px 4px -1px hsl(0 0% 9.4118% / 0);
+  --shadow-lg: 0 0px 0px 0px hsl(0 0% 9.4118% / 0),
+    0 4px 6px -1px hsl(0 0% 9.4118% / 0);
+  --shadow-xl: 0 0px 0px 0px hsl(0 0% 9.4118% / 0),
+    0 8px 10px -1px hsl(0 0% 9.4118% / 0);
+  --shadow-2xl: 0 0px 0px 0px hsl(0 0% 9.4118% / 0);
 }
 
 @layer base {
