--- a/app/app.css
+++ b/app/app.css
@@ -4,10 +4,7 @@
 @custom-variant dark (&:is(.dark *));
 
 @theme {
-  /* --font-sans: "Inter", ui-sans-serif, system-ui, sans-serif,
-    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; */
-
-  --font-sans: Inter, sans-serif;
+  --font-sans: Lexend, sans-serif;
   --font-serif: Source Serif 4, serif;
   --font-mono: JetBrains Mono, monospace;
 }
