feat(colors): update muted color variables

--- a/app/app.css
+++ b/app/app.css
@@ -86,8 +86,8 @@
   --primary-foreground: #ffffff;
   --secondary: #2c2c2c;
   --secondary-foreground: #c6c6c6;
-  --muted: #2c2c2c;
-  --muted-foreground: #c6c6c6;
+  --muted: #1d1d1d;
+  --muted-foreground: #585858;
   --accent: #1b3440;
   --accent-foreground: #00a6f4;
   --destructive: #ef4444;
