feat: update --muted color

--- a/app/app.css
+++ b/app/app.css
@@ -86,7 +86,7 @@
   --primary-foreground: #ffffff;
   --secondary: #2c2c2c;
   --secondary-foreground: #c6c6c6;
-  --muted: #1d1d1d;
+  --muted: #242424;
   --muted-foreground: #585858;
   --accent: #1b3440;
   --accent-foreground: #00a6f4;
